--- a/driveproject-backend-services-user/diriveproject-user-api/pom.xml
+++ b/driveproject-backend-services-user/diriveproject-user-api/pom.xml
@@ -3,10 +3,10 @@
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<artifactId>diriveproject-backend-parent</artifactId>
+		<artifactId>driveproject-backend-services-user</artifactId>
 		<groupId>it.diriveproject</groupId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../../driveproject-backend-parent/pom.xml</relativePath>
+
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -22,16 +22,25 @@
 	<dependencies>
 
 
+
 		<dependency>
-			<groupId>it.nexi.dcb</groupId>
-			<artifactId>dcb-openbanking-client</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<groupId>it.diriveproject</groupId>
+			<artifactId>diriveproject-user-client</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+
 		</dependency>
 
 
 	</dependencies>
 
 
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
