--- a/driveproject-backend-parent/pom.xml
+++ b/driveproject-backend-parent/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>driveproject-backend</artifactId>
+        <groupId>it.diriveproject</groupId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../../driveproject-backend/pom.xml</relativePath>
     </parent>
     <groupId>it.diriveproject</groupId>
     <artifactId>diriveproject-backend-parent</artifactId>
