--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.2.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>driveproject-backend</artifactId>
+    <groupId>it.diriveproject</groupId>
+
     <packaging>pom</packaging>
+    <version>0.0.1-SNAPSHOT</version>
+
      <modules>
-        <module>diriveproject-backend-parent</module>
+         <module>driveproject-backend-parent</module>
         <module>driveproject-backend-services-user</module>
         
     </modules>
