add commons project

--- a/driveproject-backend-services-user/diriveproject-user-api/pom.xml
+++ b/driveproject-backend-services-user/diriveproject-user-api/pom.xml
@@ -30,6 +30,18 @@
 
 		</dependency>
 
+		<dependency>
+			<groupId>it.diriveproject</groupId>
+			<artifactId>driveproject-backend-database</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+
+		</dependency>
+		<dependency>
+			<groupId>it.diriveproject</groupId>
+			<artifactId>driveproject-backend-commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 
 	</dependencies>
 
