--- a/driveproject-infra/pom.xml
+++ b/driveproject-infra/pom.xml
@@ -5,8 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>it.diriveproject</groupId>
-    <artifactId>driveproject-infra-api-gateway</artifactId>
+    <artifactId>driveproject-infra</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    
+    <modules>
+        <module>driveproject-infra-services-registry</module>
+        <module>driveproject-infra-config-server</module>
+        <module>driveproject-infra-api-gateway</module>
+    </modules>
+
+
 </project>
