--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,8 @@
          <module>driveproject-backend-services-user</module>
          <module>driveproject-backend-database</module>
          <module>driveproject-backend-commons</module>
-         <module>driveproject-infra-services-registry</module>
-         <module>driveproject-infra-config-server</module>
-         <module>driveproject-infra-api-gateway</module>
+
+         <module>driveproject-infra</module>
 
 
         
