add jwt token security

--- a/driveproject-infra/driveproject-infra-api-gateway/src/main/resources/bootstrap.yml
+++ b/driveproject-infra/driveproject-infra-api-gateway/src/main/resources/bootstrap.yml
@@ -26,6 +26,10 @@ spring:
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 260000
 
+feign:
+  hystrix:
+    enabled: true
+
 ribbon:
   ConnectTimeout: 10000
   ReadTimeout: 120000
