--- a/driveproject-backend-commons/pom.xml
+++ b/driveproject-backend-commons/pom.xml
@@ -3,16 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <parent>
-        <artifactId>diriveproject-backend-parent</artifactId>
-        <groupId>it.diriveproject</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../driveproject-backend-parent/pom.xml</relativePath>
-    </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>it.diriveproject</groupId>
     <artifactId>driveproject-backend-commons</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    
+    <dependencies>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+
+        </dependency>
+    </dependencies>
 </project>
