--- a/driveproject-infra/driveproject-infra-api-gateway/pom.xml
+++ b/driveproject-infra/driveproject-infra-api-gateway/pom.xml
@@ -15,7 +15,7 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <name>Api Gateway</name>
-   
+
 
     <properties>
         <java.version>1.8</java.version>
@@ -33,6 +33,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
             <exclusions>
@@ -42,6 +46,39 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>it.diriveproject</groupId>
+            <artifactId>driveproject-backend-commons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>1.4.6.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>it.diriveproject</groupId>
+            <artifactId>diriveproject-user-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-data-jpa</artifactId>
+                </exclusion>
+            </exclusions>
+
+
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
