--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
      <modules>
          <module>driveproject-backend-parent</module>
          <module>driveproject-backend-services-user</module>
+         <module>driveproject-backend-services-project</module>
          <module>driveproject-backend-database</module>
          <module>driveproject-backend-commons</module>
 
